; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/rtl8723bs/hal/extr_sdio_halinit.c__InitNormalChipOneOutEpPriority.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/rtl8723bs/hal/extr_sdio_halinit.c__InitNormalChipOneOutEpPriority.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.adapter = type { i32 }
%struct.hal_com_data = type { i32 }

@QUEUE_HIGH = common dso_local global i32 0, align 4
@QUEUE_LOW = common dso_local global i32 0, align 4
@QUEUE_NORMAL = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.adapter*)* @_InitNormalChipOneOutEpPriority to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @_InitNormalChipOneOutEpPriority(%struct.adapter* %0) #0 {
  %2 = alloca %struct.adapter*, align 8
  %3 = alloca %struct.hal_com_data*, align 8
  %4 = alloca i32, align 4
  store %struct.adapter* %0, %struct.adapter** %2, align 8
  %5 = load %struct.adapter*, %struct.adapter** %2, align 8
  %6 = call %struct.hal_com_data* @GET_HAL_DATA(%struct.adapter* %5)
  store %struct.hal_com_data* %6, %struct.hal_com_data** %3, align 8
  store i32 0, i32* %4, align 4
  %7 = load %struct.hal_com_data*, %struct.hal_com_data** %3, align 8
  %8 = getelementptr inbounds %struct.hal_com_data, %struct.hal_com_data* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  switch i32 %9, label %16 [
    i32 130, label %10
    i32 129, label %12
    i32 128, label %14
  ]

10:                                               ; preds = %1
  %11 = load i32, i32* @QUEUE_HIGH, align 4
  store i32 %11, i32* %4, align 4
  br label %17

12:                                               ; preds = %1
  %13 = load i32, i32* @QUEUE_LOW, align 4
  store i32 %13, i32* %4, align 4
  br label %17

14:                                               ; preds = %1
  %15 = load i32, i32* @QUEUE_NORMAL, align 4
  store i32 %15, i32* %4, align 4
  br label %17

16:                                               ; preds = %1
  br label %17

17:                                               ; preds = %16, %14, %12, %10
  %18 = load %struct.adapter*, %struct.adapter** %2, align 8
  %19 = load i32, i32* %4, align 4
  %20 = load i32, i32* %4, align 4
  %21 = load i32, i32* %4, align 4
  %22 = load i32, i32* %4, align 4
  %23 = load i32, i32* %4, align 4
  %24 = load i32, i32* %4, align 4
  %25 = call i32 @_InitNormalChipRegPriority(%struct.adapter* %18, i32 %19, i32 %20, i32 %21, i32 %22, i32 %23, i32 %24)
  ret void
}

declare dso_local %struct.hal_com_data* @GET_HAL_DATA(%struct.adapter*) #1

declare dso_local i32 @_InitNormalChipRegPriority(%struct.adapter*, i32, i32, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
